--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
     <title>GifTastic!</title>
 </head>
 <body>
+    <div id="header">
+        <h1>GIFTASTIC!</h1>
+    </div>
     
+    <div id="buttons"></div>
+
+    <div id="formContainer">
+        <form>
+            <label for="searchInput">Add a search term here:</label><br/><br/>
+            <input type="text" id="searchInput" placeholder="Search!">
+            <input type="submit" id="searchSubmit" value="Search">
+        </form>
+    </div>
+
+    <div id="images"></div>
 </body>
 </html>
