--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="assets/css/reset.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Mansalva&display=swap" rel="stylesheet">
+    <link href="assets/css/style.css" rel="stylesheet">
     <title>GifTastic!</title>
 </head>
 <body>
@@ -17,7 +20,7 @@
         <form>
             <label for="searchInput">Add a search term here:</label><br/><br/>
             <input type="text" id="searchInput" placeholder="Search!">
-            <input type="submit" id="searchSubmit" value="Search">
+            <input type="submit" id="searchSubmit" value="Submit">
         </form>
     </div>
 
