--- a/index.html
+++ b/index.html
@@ -25,5 +25,11 @@
     </div>
 
     <div id="images"></div>
+
+    <script
+  src="https://code.jquery.com/jquery-3.4.1.min.js"
+  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+  crossorigin="anonymous"></script>
+    <script src="assets/javascript/app.js"></script>
 </body>
 </html>
